Changelog
=========

9.4.dev0 - (unreleased)
-----------------------

9.3 - (2015-04-02)
------------------
* Change: Made data provenance required for published
  [szabozo0 refs #24412]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
* Feature: Added IDavizLayer browser layer
  [olimpiurob refs #24121]
* Change: Made "MultiDataProvenanceSchemaExtender" browser layer aware
  [olimpiurob refs #24121]

9.2 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

9.1 - (2014-11-20)
------------------
* Feature: formated_provenance now contain the acronym information extracted
  from the title of the data source if found within parenthesis
  [ichim-david refs #21467]

9.0 - (2014-10-01)
------------------
* Feature: removed "Caching" action. We are now using the more complex "Cache"
  action registered by eea.cache
  [ghicaale refs #21143]
* Feature: added upgrade step to remove absolete "Caching" action
  [ghicaale refs #21143]

8.9 - (2014-08-29)
------------------
* Feature: On the daviz edit page ask for confirmation before allowing users to modify data sources
  [szabozo0 refs #20869]
* Bug fix: Exclude relations where related item has link to current daviz in it's provenance info
  [szabozo0 refs #20869]

8.8 - (2014-08-27)
------------------
* Change: Also include eea.cache within full.zcml
  [voineali refs #20678]

8.7 - (2014-06-30)
------------------
* Change: Added documentation for end users
  [szabozo0 refs #18400]
* Change: Read the tags for tutorial screencasts from the description of the video
  [szabozo0 refs #18400]

8.6 - (2014-06-06)
------------------
* Feature: Added tutorials
  [szabozo0 refs #18400]

8.5 - (2014-05-13)
------------------