@@ -3,6 +3,8 @@ Changelog
 
 9.4.dev0 - (unreleased)
 -----------------------
+* Change: Made all data provenance fields required: title, link, owner
+  [szabozo0 refs #24412]
 
 9.3 - (2015-04-02)
 ------------------
